# simuloom-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish-pypi.yml  release.yml
deploy/: kubernetes.yaml
docs/: api.md  launch.md  public-launch.md  technical-guide.md
examples/benefits-eligibility/: openapi.yaml
examples/catalog-orders/: openapi.yaml
examples/constraint-validation/: README.md  openapi.yaml
src/simuloom/: config.py  (+7 more)
tests/: test_ai_assistant.py  test_ai_chat.py  test_api.py  test_console_api.py  test_contracts.py  test_deployment.py  test_edge_cases.py  test_evidence.py  test_generic.py  test_gitops.py  test_integrations.py  test_job_runner.py  test_jobs.py  test_locking.py  test_manifest.py  test_metrics.py  test_modern_api.py  test_modern_mcp.py  test_native_integration.py  test_order_lifecycle.py  test_pairwise.py  test_platform_store.py  test_readiness.py  test_repository.py  test_runtime_adapters.py  test_runtime_store.py  test_scenario_api.py  test_scenario_approvals.py  test_scenario_designer_api.py  test_scenario_evidence.py  test_scenario_promotion.py  test_scenario_releases.py  test_scenario_revisions.py  test_scenario_templates.py  test_scenarios.py  test_secrets.py  test_security.py  test_service.py  test_team_workspaces.py  test_ui.py  (+2 more)
(+54 files in other folders)
