[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simuloom-mcp"
version = "0.14.0"
description = "Contract-driven service virtualization and synthetic test-data control plane exposed through REST and MCP."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Anzar Ahsan" }]
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "mcp[cli]>=1.28,<2",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "PyYAML>=6.0,<7",
  "Faker==40.31.0",
  "jsonschema>=4.26,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[project.scripts]
simuloom = "simuloom.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/simuloom"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
